<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.pabulaner.openurifx</groupId>
  <artifactId>openurifx</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>openurifx</name>
  <description>A simple openurifx.</description>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jfx.version>21</jfx.version>
  </properties>

  <repositories>
    <repository>
      <id>openuri-fix-repo</id>
      <name>OpenURI Fix Repo</name>
      <url>file://${project.basedir}/repository</url>
    </repository>
  </repositories>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>21</source>
            <target>21</target>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
        </plugin>

        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>copy-dependencies</goal>
              </goals>
              <configuration>
                <includeScope>runtime</includeScope>
                <outputDirectory>${project.build.directory}/lib</outputDirectory>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.panteleyev</groupId>
          <artifactId>jpackage-maven-plugin</artifactId>
          <version>1.6.6</version>

          <configuration>
            <name>OpenUriFxApp</name>
            <appVersion>1.0</appVersion>
            <vendor>de.pabulaner</vendor>
            <mainClass>de.pabulaner.openurifx.OpenUriFx</mainClass>
            <mainJar>${project.build.directory}/openurifx-1.0-SNAPSHOT.jar</mainJar>
            <input>${project.build.directory}/lib</input>
            <resourceDir>${project.basedir}/src/config</resourceDir>
            <destination>target/dist</destination>

            <javaOptions>
              <option>--enable-preview</option>
              <option>-Dfile.encoding=UTF-8</option>
            </javaOptions>
          </configuration>

          <executions>
            <execution>
              <id>mac</id>
              <configuration>
                <icon>icons/icons.icns</icon>
              </configuration>
            </execution>
            <execution>
              <id>win</id>
              <configuration>
                <icon>icons/icon.ico</icon>
                <winMenu>true</winMenu>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>${jfx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${jfx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${jfx.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/junit/junit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
</project>
